--- a/widescreen.css
+++ b/widescreen.css
@@ -6,17 +6,19 @@ body {
     margin: 0;
     padding: 0;
     border: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    background-color: rgba(7, 6, 6, 0.678);
+    background-color: rgba(0, 0, 0, 0.918);
+    border-radius: 0 10px;
 }
 
 header img {
-    margin: 35px 0 10px 30px;
+    margin: 25px 0 10px 30px;
 }
 
 ul {
@@ -42,10 +44,6 @@ a {
 }
 
 #sections {
-    /*background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url("img/Fotos/ForfunBackground.jpg");
-    background-repeat: no-repeat;
-    width: 100%;
-    background-color: black;*/
     background: url("img/Fotos/ForfunBackground\ Duo.jpg");
     background-repeat: no-repeat;
     height: 500px;
@@ -101,9 +99,8 @@ article p {
 
 article a {
     color: black;
-    margin-left: 92%;
+    margin-left: 90%;
     font-size: 20px;
-    
 }
 
 footer {
@@ -111,9 +108,18 @@ footer {
     color: white;
     height: 70px;
     padding: 10px;
+    border-radius: 10px 0;
+}
+
+footer p {
+    margin-left: 10px;
+    margin-top: 20px;
+    text-align: left;
+    font-size: 16px;
 }
 
 footer a {
     float: right;
     margin-right: 10px;
+    margin-top: -50px;
 }
