--- a/widescreen.css
+++ b/widescreen.css
@@ -15,10 +15,11 @@ header {
     justify-content: space-between;
     background-color: rgba(0, 0, 0, 0.918);
     border-radius: 0 10px;
+    height: 60px;
 }
 
 header img {
-    margin: 25px 0 10px 30px;
+    margin: 15px 0 10px 30px;
 }
 
 ul {
@@ -27,9 +28,9 @@ ul {
 }
 
 li {
-    font-size: 20px;
+    font-size: 16px;
     padding: 10px;
-    margin: 10px 30px 0 0;
+    margin: 0px 30px 0 0;
 }
 
 a {
@@ -104,22 +105,57 @@ article a {
 }
 
 footer {
+    display: flex;
     background-color: black;
     color: white;
-    height: 70px;
+    height: 60px;
     padding: 10px;
     border-radius: 10px 0;
 }
 
 footer p {
+    float: left;
+    width: 90%;
     margin-left: 10px;
-    margin-top: 20px;
+    margin-top: 15px;
     text-align: left;
     font-size: 16px;
 }
 
 footer a {
-    float: right;
-    margin-right: 10px;
-    margin-top: -50px;
+    float: left;
+    width: 10%;
+    margin-right: -10px;
+    margin-left: -50px;
+    margin-top: 2px;
+}
+
+ .quemSomosFooter {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+#quemSomos {
+    display: flex;
+    justify-content: space-between;
+    margin: 15px 20px 25px 20px;
+}
+
+#quemSomos div {
+    width: 25%;
+    line-height: 10px;
+}
+
+#quemSomos img {
+    border-radius: 10px;
+}
+
+#quemSomos p {
+    
+    color: black;
+}
+
+#quemSomos #Danilo {
+    margin-left: 80px;
 }
