--- a/widescreen.css
+++ b/widescreen.css
@@ -7,6 +7,7 @@ body {
     padding: 0;
     border: 0;
     font-family: 'Roboto', sans-serif;
+    font-size: 1.2em;
 }
 
 header {
@@ -62,6 +63,7 @@ a {
     margin: 10px 10px 20px 100px;
     border-radius: 20px; 
     text-align: center;
+    font-size: 85%;
 }
 
 table, th, td {
@@ -80,7 +82,7 @@ table, th, td {
 }
 
 #sectionRight a {
-    font-size: 22px;
+    font-size: 100%;
     color: black;
 }
 
@@ -130,16 +132,35 @@ footer a {
     margin-top: 2px;
 }
 
- .quemSomosFooter {
+ .Footer {
     position: absolute;
     bottom: 0;
     width: 100%;
 }
 
+#headerQuemS{
+    border-radius: 0 0 10px 10px;
+}
+
+#forfunBG {
+    background-color: rgba(0, 0, 0, 0.993);
+    border-radius: 20px 0;
+    text-align: center;
+    width: 95%;
+    margin: 50px auto;
+}
+
+#historia {
+    margin-left: 50px;
+    width: 90%;
+    line-height: 25px;
+    margin-bottom: 40px;
+}
+
 #quemSomos {
     display: flex;
     justify-content: space-between;
-    margin: 15px 20px 25px 20px;
+    margin: 50px 20px 55px 55px; 
 }
 
 #quemSomos div {
@@ -152,14 +173,12 @@ footer a {
 }
 
 #quemSomos p {
-    
     color: black;
 }
-
-#quemSomos #Danilo {
-    margin-left: 80px;
+#Rodrigo, #Nicolas {
+    margin-top: 0px;
+    margin-right: 30px;
 }
-
 
 #formularioContato {
     width: 500px;
@@ -193,3 +212,18 @@ button {
     border: 1px solid;
     border-radius: 5px;
 }
+
+#eventosProx {
+    float: left;
+    width: 50%;
+
+
+    background-color: red;
+}
+
+#eventosPass {
+    float: left;
+    width: 50%;
+    background-color: blue;
+}
+
