--- a/widescreen.css
+++ b/widescreen.css
@@ -216,8 +216,6 @@ button {
 #eventosProx {
     float: left;
     width: 50%;
-
-
     background-color: red;
 }
 
@@ -227,3 +225,78 @@ button {
     background-color: blue;
 }
 
+.produtoSelecionado {
+    font-weight: bolder;
+}
+
+.itens {
+    float: left;
+    width: 20%;
+    background-color: rgba(0, 0, 0, 0.082);
+    min-height: 100%;
+}
+
+
+.itens ul {
+    display: table;
+    min-height: 100%;
+    line-height: 60px;
+}
+
+.itens a {
+    color: black;
+    font-size: 120%;
+}
+
+.todosProdutos {
+    float: left;
+    width: 80%;
+}
+
+.todosProdutos div .div1, .div2 {
+    float: left;
+    width: 40%;
+    margin: 20px 10px 20px 50px;
+    color: rgba(0, 0, 0, 0.671);
+}
+
+.produtosLine {
+    display: flex;
+    margin-top: 10px;
+}
+
+.produtosLine .tamanhos {
+    width: 50px;
+    margin-left: 10px
+}
+
+.comprar {
+    background-color: white;
+    color: rgba(0, 0, 0, 0.781);
+    margin-left: 45px;
+}
+
+.div1 .preco {
+    /*margin-top: -100%;*/
+    margin-left: 0px;
+    color: rgba(8, 8, 8, 0.726);
+}
+
+#caneca {
+    margin: 30px 0 30px 50px;
+    line-height: 5px;
+}
+
+#caneca .preco {
+    margin-left: 75px;
+}
+
+
+.bones {
+    display: flex;
+    margin-left: -50px;
+}
+
+.bones .preco {
+    margin-left: 10%;
+}
