--- a/widescreen.css
+++ b/widescreen.css
@@ -19,9 +19,7 @@ header {
     height: 60px;
 }
 
-header img {
-    margin: 15px 0 10px 30px;
-}
+header img { margin: 15px 0 10px 30px; }
 
 ul {
     display: flex;
@@ -86,9 +84,7 @@ table, th, td {
     color: black;
 }
 
-#sectionRight p {
-    margin: 380px 0 0 270px;
-}
+#sectionRight p { margin: 380px 0 0 270px; }
 
 article {
     margin: 10px 10px 15px 100px;
@@ -138,9 +134,7 @@ footer a {
     width: 100%;
 }
 
-#headerQuemS{
-    border-radius: 0 0 10px 10px;
-}
+#headerQuemS{ border-radius: 0 0 10px 10px; }
 
 #forfunBG {
     background-color: rgba(0, 0, 0, 0.993);
@@ -168,13 +162,9 @@ footer a {
     line-height: 10px;
 }
 
-#quemSomos img {
-    border-radius: 10px;
-}
+#quemSomos img { border-radius: 10px; }
+#quemSomos p { color: black; }
 
-#quemSomos p {
-    color: black;
-}
 #Rodrigo, #Nicolas {
     margin-top: 0px;
     margin-right: 30px;
@@ -225,17 +215,14 @@ button {
     background-color: blue;
 }
 
-.produtoSelecionado {
-    font-weight: bolder;
-}
+.produtoSelecionado { font-weight: bolder; }
 
 .itens {
     float: left;
-    width: 20%;
+    width: 16%;
     background-color: rgba(0, 0, 0, 0.082);
-    min-height: 100%;
+    height: 100vh; /*100vh = 100%, porém não depende da altura do elemento pai*/
 }
-
 
 .itens ul {
     display: table;
@@ -250,13 +237,13 @@ button {
 
 .todosProdutos {
     float: left;
-    width: 80%;
+    width: 84%;
 }
 
 .todosProdutos div .div1, .div2 {
     float: left;
-    width: 40%;
-    margin: 20px 10px 20px 50px;
+    width: 42%;
+    margin: 20px 10px 30px 50px;
     color: rgba(0, 0, 0, 0.671);
 }
 
@@ -277,7 +264,6 @@ button {
 }
 
 .div1 .preco {
-    /*margin-top: -100%;*/
     margin-left: 0px;
     color: rgba(8, 8, 8, 0.726);
 }
@@ -287,16 +273,11 @@ button {
     line-height: 5px;
 }
 
-#caneca .preco {
-    margin-left: 75px;
-}
-
+#caneca .preco { margin-left: 75px; }
 
 .bones {
     display: flex;
     margin-left: -50px;
 }
 
-.bones .preco {
-    margin-left: 10%;
-}
+.bones .preco { margin-left: 10%; }
