--- a/widescreen.css
+++ b/widescreen.css
@@ -8,6 +8,8 @@ body {
     border: 0;
     font-family: 'Roboto', sans-serif;
     font-size: 1.2em;
+    height: 100%;
+    width: 100%;
 }
 
 header {
@@ -96,6 +98,10 @@ article p {
     line-height: 25px;
 }
 
+article h1 {
+    margin-left: 50px;
+}
+
 article a {
     color: black;
     margin-left: 90%;
@@ -133,8 +139,6 @@ footer a {
     bottom: 0;
     width: 100%;
 }
-
-#headerQuemS{ border-radius: 0 0 10px 10px; }
 
 #forfunBG {
     background-color: rgba(0, 0, 0, 0.993);
@@ -185,7 +189,7 @@ footer a {
     text-align: center;
     font-size: 16px;
     background-color: rgba(201, 193, 193, 0.185);
-    margin: -15px 0 0 30%;
+    margin: -0px 0 0 30%;
     padding: 20px;
 }
 
@@ -212,6 +216,8 @@ button {
     border-radius: 5px;
 }
 
+#formularioContato button { margin-top: -15px; }
+
 #eventosProx {
     float: left;
     width: 50%;
@@ -230,7 +236,9 @@ button {
     float: left;
     width: 16%;
     background-color: rgba(0, 0, 0, 0.082);
-    height: 100vh; /*100vh = 100%, porém não depende da altura do elemento pai*/
+    height: 100%; 
+    position: fixed;
+    top: 0;
 }
 
 .itens ul {
@@ -238,6 +246,8 @@ button {
     min-height: 100%;
     line-height: 60px;
 }
+
+.itens ul li{ margin-top: 40%; }
 
 .itens a {
     color: black;
@@ -247,6 +257,7 @@ button {
 .todosProdutos {
     float: left;
     width: 84%;
+    margin-left: 16%;
 }
 
 .todosProdutos div .div1, .div2 {
@@ -259,6 +270,7 @@ button {
 .produtosLine {
     display: flex;
     margin-top: 10px;
+    margin-left: 20px;
 }
 
 .produtosLine .tamanhos {
@@ -270,11 +282,6 @@ button {
     background-color: white;
     color: rgba(0, 0, 0, 0.781);
     margin-left: 45px;
-}
-
-.div1 .preco {
-    margin-left: 0px;
-    color: rgba(8, 8, 8, 0.726);
 }
 
 #caneca {
@@ -382,4 +389,4 @@ button {
    transform: scale(1.05)
 }
 
-
+#headerQuemS { border-radius: 0; }
