--- a/widescreen.css
+++ b/widescreen.css
@@ -264,7 +264,6 @@ button {
     display: flex;
     width: 100%;
     height: 100vh;
-    
     overflow: hidden;
 }
 
@@ -347,7 +346,7 @@ a:hover {
 }
 
 #headerQuemS { border-radius: 0; }
-
+/*
 .discografia {
     text-align: center;
 }
@@ -364,4 +363,80 @@ a:hover {
 
 .discografia a p {
     margin: -10px;
+}*/
+
+.discografia {
+    display: flex;
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
+}
+
+#CDA {
+    background: linear-gradient(rgba(255, 255, 255, 0.116), rgba(255, 255, 255, 0.116)), url("img/Cd/CDDas-pistas-de-skate-as-pistas-de-danca.jpg"); 
+    background-repeat: no-repeat;
+    background-size: 100%;
+    float: left;
+    width: 33%;
+}
+
+#CDB {
+    background: linear-gradient(rgba(255, 255, 255, 0.384), rgba(255, 255, 255, 0.719)), url("img/Cd/CDTeoriaDinamica.jpg"); 
+    background-repeat: no-repeat;
+    background-size: 100%;
+    float: left;
+    width: 33%;
+}
+
+#CDC {
+    background: linear-gradient(rgba(255, 255, 255, 0.384), rgba(255, 255, 255, 0.719)), url("img/Cd/CDPolisenso.jpg"); 
+    background-repeat: no-repeat;
+    background-size: 100%;
+    float: left;
+    width: 33%;
+}
+
+#CDE {
+    background: linear-gradient(rgba(255, 255, 255, 0.384), rgba(255, 255, 255, 0.719)), url("img/Cd/CDAlegriaCompartilhada.png"); 
+    background-repeat: no-repeat;
+    background-size: 100%;
+    float: left;
+    width: 33%;
+}
+
+#CDF {
+    background: linear-gradient(rgba(255, 255, 255, 0.384), rgba(255, 255, 255, 0.719)), url("img/Cd/CDAoVivoNoDiscoVoador.png"); 
+    background-repeat: no-repeat;
+    background-size: 100%;
+    float: left;
+    width: 33%;
+}
+
+#CDG {
+    background: linear-gradient(rgba(255, 255, 255, 0.384), rgba(255, 255, 255, 0.719)), url("img/Cd/CDNu.jpg"); 
+    background-repeat: no-repeat;
+    background-size: 100%;
+    float: left;
+    width: 33%;
+}
+
+#CDA, #CDB, #CDC, #CDD, #CDE, #CDF, #CDG {
+    margin: 50px 50px 30px 50px;
+}
+
+.discografia p {
+    opacity: 0.0;
+    padding-top: 275px;
+    color: rgba(0, 0, 0, 0.664);
+}
+
+.discografia div:hover {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.05);
+    cursor: pointer;
+    opacity: 1.0;
+}
+
+.discografia p:hover {
+    opacity: 1.0;
 }
