--- a/widescreen.css
+++ b/widescreen.css
@@ -387,3 +387,37 @@ a:hover {
     background-repeat: no-repeat;
     background-size: 100%; 
 }
+
+#eventos {
+    display: flex;
+    width: 100%;
+    margin-top: -20px;
+}
+
+#eventosA, #eventosB {
+    float: left;
+    width: 50%;
+    height: 60px;
+    border-radius: 10px 0;
+}
+
+#eventosA {
+    background-color: rgba(0, 0, 0, 0.247);
+    margin-left: 100px;
+    margin-right: 10px;
+}
+
+#eventosB {
+    background-color: rgba(0, 0, 0, 0.548);
+    margin-right: 100px;
+    margin-left: 10px;
+}
+
+#eventos p {
+    padding-top: 20px;
+    padding-left: 40px;
+}
+
+#eventos > #eventosB {
+    padding-left: 430px;
+}
