--- a/widescreen.css
+++ b/widescreen.css
@@ -402,13 +402,14 @@ a:hover {
 }
 
 #eventosA {
-    background-color: rgba(0, 0, 0, 0.336);
+    background-color: rgb(0, 0, 0);
     margin-left: 100px;
     margin-right: 10px;
 }
 
 #eventosB {
-    background-color: rgba(0, 0, 0, 0.178);
+    background-color: rgba(255, 255, 255, 0.178);
+    border: 1px solid black;
     margin-right: 100px;
     margin-left: 10px;
 }
@@ -419,7 +420,7 @@ a:hover {
     padding-left: 30px;
 }
 
-#eventos a { color: black; }
+#eventosB p { color: black; }
 #eventos > #eventosB { padding-left: 340px; }
 #eventos > #eventosA { padding-right: 320px; }
 
@@ -463,3 +464,14 @@ a:hover {
     opacity: 0.8;
 }
 
+#galeria {
+    display: flex;
+}
+
+figure{
+    margin: 80px auto;
+}
+
+.seta {
+    margin: 180px 140px 0 140px;
+}
