Organização de pastas, modificando abertura de outros sites em novas abas

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,7 @@ a {
 }
 
 #sections {
-    background: url("img/Fotos/ForfunBackground\ Duo.jpg");
+    background: url("../img/Fotos/ForfunBackground\ Duo.jpg");
     background-repeat: no-repeat;
     width: 100%;
     max-width: 100%;
