--- a/styles/style.css
+++ b/styles/style.css
@@ -130,3 +130,17 @@ footer a {
 footer a img {
     width: 92%;
 }
+
+
+
+
+#formularioContato {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    font-size: 16px;
+    line-height: 160%;
+    margin: 0 auto;
+    text-align: center;
+    background-color: rgba(201, 193, 193, 0.185);
+}
