--- a/styles/widescreen.css
+++ b/styles/widescreen.css
@@ -405,12 +405,13 @@ a:hover {
 #eventos {
     display: flex;
     width: 100%;
+    max-width: 100%;
     margin-top: -25px;
 }
 
 #eventosA, #eventosB {
     float: left;
-    width: 50%;
+    width: 40%;
     height: 100px;
     border-radius: 10px 0;
 }
@@ -429,13 +430,13 @@ a:hover {
 }
 
 #eventos p {
-    font-size: 110%;
+    font-size: 100%;
     padding-top: 10px;
     padding-left: 30px;
 }
 
 #eventosB p { color: black; }
-#eventos > #eventosB { padding-left: 340px; }
+#eventos > #eventosB { padding-left: 320px; }
 #eventos > #eventosA { padding-right: 320px; }
 
 #eventosB:hover, #eventosA:hover {
