--- a/styles/smallscreen.css
+++ b/styles/smallscreen.css
@@ -178,9 +178,6 @@ footer a img {
     width: 92%;
 }
 
-
-
-
 #formularioContato {
     display: flex;
     flex-direction: column;
@@ -260,3 +257,98 @@ footer a img {
 #shows a { color: black; }
 #shows table { border-spacing: 10px; }
 #shows table td, th { padding-left: 15px;}
+
+.discografia {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    max-width: 100%;
+    height: 30vh;
+    font-size: 12px;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+.discografia p { visibility: hidden; }
+.discografia div { width: 33%; }
+
+#CDA { background: linear-gradient(rgba(255, 255, 255, 0.288), rgba(255, 255, 255, 0.116)), url("../img/Cd/CDDas-pistas-de-skate-as-pistas-de-danca2.jpg"); }
+#CDB { background: linear-gradient(rgba(255, 255, 255, 0.233), rgba(255, 255, 255, 0.384)), url("../img/Cd/CDTeoriaDinamica2.jpg"); }
+#CDC { background: linear-gradient(rgba(255, 255, 255, 0.308), rgba(255, 255, 255, 0.295)), url("../img/Cd/CDPolisenso2.jpg"); }
+#CDE { background: linear-gradient(rgba(255, 255, 255, 0.24), rgba(255, 255, 255, 0.479)), url("../img/Cd/CDAlegriaCompartilhada.jpg"); }
+#CDF { background: linear-gradient(rgba(255, 255, 255, 0.205), rgba(255, 255, 255, 0.349)), url("../img/Cd/CDAoVivoNoDiscoVoador.jpg"); }
+#CDG { background: linear-gradient(rgba(255, 255, 255, 0.384), rgba(255, 255, 255, 0.719)), url("../img/Cd/CDNu2.jpg"); }
+
+#CDA, #CDB, #CDC, #CDE, #CDF, #CDG { 
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.discografia div:hover {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+    cursor: pointer;
+    opacity: 1.0;
+}
+
+#CDA:hover { background: linear-gradient(rgba(255, 255, 255, 0.288), rgba(255, 255, 255, 0.116)), url("../img/Cd/CDDas-pistas-de-skate-as-pistas-de-danca.jpg"); }
+#CDB:hover { background: linear-gradient(rgba(255, 255, 255, 0.233), rgba(255, 255, 255, 0.384)), url("../img/Cd/CDTeoriaDinamica.jpg"); }
+#CDC:hover { background: linear-gradient(rgba(255, 255, 255, 0.308), rgba(255, 255, 255, 0.295)), url("../img/Cd/CDPolisenso.jpg"); }
+#CDE:hover { background: linear-gradient(rgba(255, 255, 255, 0.24), rgba(255, 255, 255, 0.479)), url("../img/Cd/CDAlegriaCompartilhada.png"); }
+#CDF:hover { background: linear-gradient(rgba(255, 255, 255, 0.205), rgba(255, 255, 255, 0.349)), url("../img/Cd/CDAoVivoNoDiscoVoador.png"); }
+#CDG:hover { background: linear-gradient(rgba(255, 255, 255, 0.384), rgba(255, 255, 255, 0.719)), url("../img/Cd/CDNu.jpg"); }
+
+#CDA:hover, #CDB:hover, #CDC:hover, #CDE:hover, #CDF:hover, #CDG:hover {
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+#footerDisco, .Footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+/*
+
+
+.discografia {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+}
+#CDA, #CDB, #CDC, #CDE, #CDF, #CDG { 
+    background-repeat: no-repeat;
+    width: 80%;
+    height: auto;
+    background-size: contain;
+}
+
+.discografia p {
+    opacity: 0.0;
+    color: rgba(0, 0, 0, 0.664);
+}
+
+.discografia div:hover {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+    cursor: pointer;
+    opacity: 1.0;
+}
+
+
+#CDA:hover { background: linear-gradient(rgba(255, 255, 255, 0.288), rgba(255, 255, 255, 0.116)), url("../img/Cd/CDDas-pistas-de-skate-as-pistas-de-danca.jpg"); }
+#CDB:hover { background: linear-gradient(rgba(255, 255, 255, 0.233), rgba(255, 255, 255, 0.384)), url("../img/Cd/CDTeoriaDinamica.jpg"); }
+#CDC:hover { background: linear-gradient(rgba(255, 255, 255, 0.308), rgba(255, 255, 255, 0.295)), url("../img/Cd/CDPolisenso.jpg"); }
+#CDE:hover { background: linear-gradient(rgba(255, 255, 255, 0.24), rgba(255, 255, 255, 0.479)), url("../img/Cd/CDAlegriaCompartilhada.png"); }
+#CDF:hover { background: linear-gradient(rgba(255, 255, 255, 0.205), rgba(255, 255, 255, 0.349)), url("../img/Cd/CDAoVivoNoDiscoVoador.png"); }
+#CDG:hover { background: linear-gradient(rgba(255, 255, 255, 0.384), rgba(255, 255, 255, 0.719)), url("../img/Cd/CDNu.jpg"); }
+
+#CDA:hover, #CDB:hover, #CDC:hover, #CDE:hover, #CDF:hover, #CDG:hover {
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-size: 100%; 
+}*/
