--- a/styles/style.css
+++ b/styles/style.css
@@ -242,3 +242,84 @@ footer a img {
 #shows a { color: black; }
 #shows table { border-spacing: 10px; }
 #shows table td, th { padding-left: 10px;}
+
+
+#quemSomosDiv {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+#quemSomosA {
+    float: left;
+    width: 25%;
+    background: linear-gradient(rgba(255, 255, 255, 0.384), rgba(255, 255, 255, 0.521)), url("../img/Fotos/A.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    /*  opacity: 0.5;*/
+}
+
+#quemSomosB {
+    float: left;
+    width: 25%;
+    margin-left: 10px;
+    background: linear-gradient(rgba(255, 255, 255, 0.384), rgba(255, 255, 255, 0.521)), url("../img/Fotos/B.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+#quemSomosC {
+    float: left;
+    width: 25%;
+    margin-left: 10px; 
+    background: linear-gradient(rgba(255, 255, 255, 0.384), rgba(255, 255, 255, 0.719)), url("../img/Fotos/C.png"); 
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+#quemSomosD {
+    float: left;
+    width: 25%;
+    margin-left: 10px;
+    background: linear-gradient(rgba(255, 255, 255, 0.384), rgba(255, 255, 255, 0.521)), url("../img/Fotos/D.png"); 
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+
+#quemSomosA p, #quemSomosB p, #quemSomosC p, #quemSomosD p { color: rgba(255, 255, 255, 0.897); }
+#quemSomosA p { margin-left: 27%; }
+#quemSomosB p { margin-left: 20%; }
+#quemSomosC p { margin-left: 15%; }
+#quemSomosD p { margin-left: 32%; }
+
+#quemSomosA h3, #quemSomosB h3, #quemSomosC h3, #quemSomosD h3 {
+    color: rgba(255, 255, 255, 0.877);
+    margin-top: 30%;
+    margin-bottom: -5%;
+    margin-left: 25%;
+}
+
+#quemSomosA img, #quemSomosB img, #quemSomosC img, #quemSomosD img {
+    width: 30px;
+    margin-left: 45%;
+}
+
+#quemSomosA hr, #quemSomosB hr, #quemSomosC hr, #quemSomosD hr {
+    width: 50px;
+    border: 1px solid white;
+}
+
+#quemSomosA, #quemSomosB, #quemSomosC, #quemSomosD {
+    width: 100%;
+    height: 100%;
+    -webkit-transition: -webkit-transform .5s ease;
+    transition: transform .5s ease;
+} 
+
+#quemSomosA:hover, #quemSomosB:hover, #quemSomosC:hover, #quemSomosD:hover, button:hover {
+   -webkit-transform: scale(1.1);
+   transform: scale(1.05);
+   cursor: pointer;
+}
